Still trying to fix autocomplete scroll on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -118,7 +118,11 @@ h1.logo {
 }
 
 
-/* AUTOCOMPLETE */
+/* GUESS/SUGGESTIONS */
+
+.guess-input-wrapper {
+  width: 100%;
+}
 
 .autocomplete-wrapper {
   position: relative;
